--- a/gitapp/templates/home.html
+++ b/gitapp/templates/home.html
@@ -1,5 +1,7 @@
 <h1>홈홈홈</h1>
 
+<a href="{% url 'new' %}">일기 작성하기</a>
+
 {% for post in posts_list %}
 <h3>{{post.title}}</h3>
 <p>{{post.pub_date}}</p>
